# Auto_Hydroponics_RP2040

./: CMakeLists.txt  main.cpp
Classes/: ATLAS_TEMP_PROBE.cpp  Atlas_Temp_Probe.cpp
Device_Info/: Device_Info(EZO_RTD).txt
Headers/: Atlas_Temp_Probe.h
Source_files/: I2C.cpp
source_file/: main.cpp  server.cpp
